// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-messaging - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Troubleshoot and resolve issues with Azure Messaging SDKs for Event Hubs and Service Bus. Covers connection failures, authentication errors, message processing issues, and SDK configuration problems. WHEN: event hub SDK error, service bus SDK issue, messaging connection failure, AMQP error, event processor host issue, message lock lost, send timeout, receiver disconnected, SDK troubleshooting, azure messaging SDK, event hub consumer, service bus queue issue, topic subscription error, enable logging event hub, service bus logging, eventhub python, servicebus java, eventhub javascript, servicebus dotnet, event hub checkpoint, event hub not receiving messages, service bus dead letter.",
  "extractedKeywords": [
    "amqp",
    "authentication",
    "azure",
    "checkpoint",
    "configuration",
    "connection",
    "consumer",
    "covers",
    "dead",
    "diagnostic",
    "disconnected",
    "dotnet",
    "enable",
    "error",
    "errors",
    "event",
    "eventhub",
    "failure",
    "failures",
    "host",
    "hubs",
    "issue",
    "issues",
    "java",
    "javascript",
    "letter",
    "lock",
    "logging",
    "lost",
    "mcp",
    "message",
    "messages",
    "messaging",
    "monitor",
    "problems",
    "processing",
    "processor",
    "python",
    "queue",
    "receiver",
    "receiving",
    "resolve",
    "sdks",
    "send",
    "service",
    "servicebus",
    "subscription",
    "timeout",
    "topic",
    "troubleshoot",
    "troubleshooting",
    "when",
    "with",
  ],
  "name": "azure-messaging",
}
`;

exports[`azure-messaging - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "amqp",
  "authentication",
  "azure",
  "checkpoint",
  "configuration",
  "connection",
  "consumer",
  "covers",
  "dead",
  "diagnostic",
  "disconnected",
  "dotnet",
  "enable",
  "error",
  "errors",
  "event",
  "eventhub",
  "failure",
  "failures",
  "host",
  "hubs",
  "issue",
  "issues",
  "java",
  "javascript",
  "letter",
  "lock",
  "logging",
  "lost",
  "mcp",
  "message",
  "messages",
  "messaging",
  "monitor",
  "problems",
  "processing",
  "processor",
  "python",
  "queue",
  "receiver",
  "receiving",
  "resolve",
  "sdks",
  "send",
  "service",
  "servicebus",
  "subscription",
  "timeout",
  "topic",
  "troubleshoot",
  "troubleshooting",
  "when",
  "with",
]
`;
